// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateOpinion /> when the query is on desktop should render a FOR opinion 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL ghJpbt cap-abstract-card"
  >
    <div
      aria-label="Tag "
      className="sc-bcXGCL kqegfx cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      title=""
    >
      <span
        className="sc-bcXGCL KgSYF cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="sc-bcXGCL vKvFG"
    />
    <div
      className="sc-bcXGCL eiUVZV"
    >
      <div
        className="sc-bcXGCL gJEVDa"
      >
        <span
          className="UserAvatar__UserAvatarContainer-jxoNlw imfDjz"
          hasBadge={false}
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <div
            className="sc-bcXGCL qWMyx sc-fbYNKQ qltGU cap-avatar"
          >
            <img
              alt="Agui le penseur"
              className="sc-bcXGCL fUNjxh"
              src="<mock-value-for-field-\\"avatarUrl\\">"
            />
          </div>
        </span>
        <div
          className="sc-bcXGCL gkMwg"
        >
          <p
            className="sc-bcXGCL iCvqfB cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="sc-bcXGCL ilQWDZ cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL ghdPxh"
      >
        <h4
          className="sc-bcXGCL bXwsiw cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="sc-bcXGCL kxBQAH cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`<DebateOpinion /> when the query is on desktop should render an AGAINST opinion 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL ghJpbt cap-abstract-card"
  >
    <div
      aria-label="Tag "
      className="sc-bcXGCL kqegfx cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      title=""
    >
      <span
        className="sc-bcXGCL KgSYF cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="sc-bcXGCL vKvFG"
    />
    <div
      className="sc-bcXGCL eiUVZV"
    >
      <div
        className="sc-bcXGCL gJEVDa"
      >
        <span
          className="UserAvatar__UserAvatarContainer-jxoNlw imfDjz"
          hasBadge={false}
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <div
            className="sc-bcXGCL qWMyx sc-fbYNKQ qltGU cap-avatar"
          >
            <img
              alt="Agui le penseur"
              className="sc-bcXGCL fUNjxh"
              src="<mock-value-for-field-\\"avatarUrl\\">"
            />
          </div>
        </span>
        <div
          className="sc-bcXGCL gkMwg"
        >
          <p
            className="sc-bcXGCL iCvqfB cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="sc-bcXGCL ilQWDZ cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL ghdPxh"
      >
        <h4
          className="sc-bcXGCL bXwsiw cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="sc-bcXGCL kxBQAH cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`<DebateOpinion /> when the query is on desktop should render with a read more link 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL fwhnyr cap-abstract-card"
  >
    <div
      aria-label="Tag "
      className="sc-bcXGCL kqegfx cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      title=""
    >
      <span
        className="sc-bcXGCL KgSYF cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="sc-bcXGCL eiUVZV"
    >
      <div
        className="sc-bcXGCL gJEVDa"
      >
        <span
          className="UserAvatar__UserAvatarContainer-jxoNlw imfDjz"
          hasBadge={false}
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <div
            className="sc-bcXGCL qWMyx sc-fbYNKQ qltGU cap-avatar"
          >
            <img
              alt="Agui le penseur"
              className="sc-bcXGCL fUNjxh"
              src="<mock-value-for-field-\\"avatarUrl\\">"
            />
          </div>
        </span>
        <div
          className="sc-bcXGCL gkMwg"
        >
          <p
            className="sc-bcXGCL iCvqfB cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="sc-bcXGCL ilQWDZ cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL ghdPxh"
      >
        <h4
          className="sc-bcXGCL bXwsiw cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="sc-bcXGCL kxBQAH cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`<DebateOpinion /> when the query is on mobile should render a FOR opinion 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL ghJpbt cap-abstract-card"
  >
    <div
      aria-label="Tag "
      className="sc-bcXGCL kqegfx cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      title=""
    >
      <span
        className="sc-bcXGCL KgSYF cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="sc-bcXGCL vKvFG"
    />
    <div
      className="sc-bcXGCL eiUVZV"
    >
      <div
        className="sc-bcXGCL gJEVDa"
      >
        <span
          className="UserAvatar__UserAvatarContainer-jxoNlw imfDjz"
          hasBadge={false}
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <div
            className="sc-bcXGCL qWMyx sc-fbYNKQ qltGU cap-avatar"
          >
            <img
              alt="Agui le penseur"
              className="sc-bcXGCL fUNjxh"
              src="<mock-value-for-field-\\"avatarUrl\\">"
            />
          </div>
        </span>
        <div
          className="sc-bcXGCL gkMwg"
        >
          <p
            className="sc-bcXGCL iCvqfB cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="sc-bcXGCL ilQWDZ cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL ghdPxh"
      >
        <h4
          className="sc-bcXGCL bXwsiw cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="sc-bcXGCL kxBQAH cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
        <button
          className="sc-bcXGCL sc-gGvGpy dXuIGx cITHqt cap-button DebateOpinion___StyledButton-eaqExq bkrrPY"
          onClick={[Function]}
          type="button"
        >
          capco.module.read_more
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`<DebateOpinion /> when the query is on mobile should render with a read more link 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL fwhnyr cap-abstract-card"
  >
    <div
      aria-label="Tag "
      className="sc-bcXGCL kqegfx cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      title=""
    >
      <span
        className="sc-bcXGCL KgSYF cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="sc-bcXGCL eiUVZV"
    >
      <div
        className="sc-bcXGCL gJEVDa"
      >
        <span
          className="UserAvatar__UserAvatarContainer-jxoNlw imfDjz"
          hasBadge={false}
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <div
            className="sc-bcXGCL qWMyx sc-fbYNKQ qltGU cap-avatar"
          >
            <img
              alt="Agui le penseur"
              className="sc-bcXGCL fUNjxh"
              src="<mock-value-for-field-\\"avatarUrl\\">"
            />
          </div>
        </span>
        <div
          className="sc-bcXGCL gkMwg"
        >
          <p
            className="sc-bcXGCL iCvqfB cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="sc-bcXGCL ilQWDZ cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL ghdPxh"
      >
        <h4
          className="sc-bcXGCL bXwsiw cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="sc-bcXGCL kxBQAH cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
        <button
          className="sc-bcXGCL sc-gGvGpy dXuIGx cITHqt cap-button DebateOpinion___StyledButton-eaqExq bkrrPY"
          onClick={[Function]}
          type="button"
        >
          capco.module.read_more
        </button>
      </div>
    </div>
  </div>,
]
`;
